force-app/main/default/objects/Global_Trigger_Settings__c/Global_Trigger_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Define trigger settings that apply to all Lightning LDV triggers, such as regular maintenance hours and ad hoc disabling of all triggers</description>
    <label>Global Trigger Settings</label>
</CustomObject>