force-app/main/default/objects/Global_Trigger_Settings__c/fields/Blackout_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Period_End__c</fullName>
    <description>Defines the end of a blackout period, during which all LDV trigger processing is disabled except for that which is required to enable later batch processing of that data. The Date portion of this field is relevant, unlike the maintenance window fields.</description>
    <label>Blackout Period End</label>
    <type>DateTime</type>
</CustomField>