force-app/main/default/objects/Global_Trigger_Settings__c/fields/Maintenance_Window_End__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Window_End__c</fullName>
    <description>Defines the end of the maintenance window, during which all LDV trigger processing is disabled except for that which is required to enable later batch processing of that data. The Date portion of this field is ignored.</description>
    <label>Maintenance Window End</label>
    <type>DateTime</type>
</CustomField>