force-app/main/default/objects/Global_Trigger_Settings__c/fields/Trigger_Delay__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Delay__c</fullName>
    <description>Amount of time after DML occurs before Lightning LDV triggers should be executed. If the delay is 0 it will happen synchronously. If the delay is greater than 0, it will be scheduled for asynchronous execution.</description>
    <inlineHelpText>Amount of time after DML occurs before Lightning LDV triggers should be executed. If the delay is 0 it will happen synchronously. If the delay is greater than 0, it will be scheduled for asynchronous execution.</inlineHelpText>
    <label>Trigger_Delay</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>